Fix: App.css, because the text was overflowing and making a bad design

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@
   margin: 10px 0px;
 }
 
+.main section div p {
+  overflow-wrap: anywhere;
+}
+
 .main section div div {
   display: flex;
   justify-content: space-between;
